--- a/Tata_Newsletter/index.html
+++ b/Tata_Newsletter/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>November Newsletter</title>
 <style>
-    /* This ensures images don't have gaps on mobile */
     img { display: block; border: 0; }
 </style>
 </head>
@@ -14,31 +13,73 @@
             
             <tr>
                 <td align="center" style="padding: 10px; font-family: Arial, sans-serif; font-size: 12px;">
-                    <a href="#" target="_blank" style="color: #666666; text-decoration: underline;">
+                    <a href="https://digvijay1008.github.io/tata-newsletter-nov2025/Tata_Newsletter/" target="_blank" style="color: #666666; text-decoration: underline;">
                         View this email in your browser
                     </a>
                 </td>
             </tr>
 
-            <tr>
-                <td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                    <img src="01.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 1">
-                </td>
-            </tr>
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0001.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 1">
+            </td></tr>
 
-            <tr>
-                <td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                    <img src="02.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 2">
-                </td>
-            </tr>
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0002.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 2">
+            </td></tr>
 
-            <tr>
-                <td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                    <img src="03.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 3">
-                </td>
-            </tr>
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0003.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 3">
+            </td></tr>
 
-            </table>
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0004.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 4">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0005.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 5">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0006.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 6">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0007.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 7">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0008.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 8">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0009.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 9">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0010.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 10">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0011.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 11">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0012.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 12">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0013.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 13">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0014.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 14">
+            </td></tr>
+
+            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
+                <img src="Newsletter_internal_pages-to-jpg-0015.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 15">
+            </td></tr>
+
+        </table>
     </center>
 </body>
 </html>
