--- a/Tata_Newsletter/index.html
+++ b/Tata_Newsletter/index.html
@@ -20,7 +20,7 @@
             </tr>
 
             <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0001.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 1">
+                <img src="https://github.com/Digvijay1008/tata-newsletter-nov2025/blob/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0001.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 1">
             </td></tr>
 
             <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
@@ -83,3 +83,4 @@
     </center>
 </body>
 </html>
+
