--- a/Tata_Newsletter/index.html
+++ b/Tata_Newsletter/index.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 <title>November Newsletter</title>
 <style>
-    img { display: block; border: 0; }
+    /* This ensures images touch each other perfectly */
+    img { display: block; border: 0; width: 100%; max-width: 600px; }
+    td { line-height: 0; font-size: 0; }
 </style>
 </head>
 <body style="margin: 0; padding: 0; background-color: #eeeeee;">
@@ -12,75 +14,30 @@
         <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="background-color: #ffffff; border-collapse: collapse;">
             
             <tr>
-                <td align="center" style="padding: 10px; font-family: Arial, sans-serif; font-size: 12px;">
-                    <a href="https://digvijay1008.github.io/tata-newsletter-nov2025/Tata_Newsletter/" target="_blank" style="color: #666666; text-decoration: underline;">
+                <td align="center" style="line-height: normal; font-size: 12px; padding: 10px;">
+                    <a href="https://digvijay1008.github.io/tata-newsletter-nov2025/Tata_Newsletter/" target="_blank" style="color: #666666; text-decoration: underline; font-family: Arial, sans-serif;">
                         View this email in your browser
                     </a>
                 </td>
             </tr>
 
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="https://github.com/Digvijay1008/tata-newsletter-nov2025/blob/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0001.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 1">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0002.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 2">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0003.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 3">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0004.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 4">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0005.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 5">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0006.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 6">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0007.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 7">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0008.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 8">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0009.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 9">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0010.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 10">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0011.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 11">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0012.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 12">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0013.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 13">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0014.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 14">
-            </td></tr>
-
-            <tr><td align="center" style="padding: 0; margin: 0; line-height: 0;">
-                <img src="Newsletter_internal_pages-to-jpg-0015.jpg" width="600" style="display: block; width: 100%; max-width: 600px;" alt="Page 15">
-            </td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0001.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0002.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0003.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0004.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0005.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0006.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0007.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0008.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0009.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0010.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0011.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0012.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0013.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0014.jpg"></td></tr>
+            <tr><td><img src="https://raw.githubusercontent.com/Digvijay1008/tata-newsletter-nov2025/main/Tata_Newsletter/Newsletter_internal_pages-to-jpg-0015.jpg"></td></tr>
 
         </table>
     </center>
 </body>
 </html>
-
